--- a/index.html
+++ b/index.html
@@ -47,11 +47,35 @@
 						<p class="product__category">
 							Unisex Skateboarding Shoe
 						</p>
+						<ul class="product__stars" data-stars="3">
+							<li class="product__star"></li>
+							<li class="product__star"></li>
+							<li class="product__star"></li>
+							<li class="product__star"></li>
+							<li class="product__star"></li>
+						</ul>
+						<ul class="product__stars--v2" data-stars="2">
+							<li class="product__star--v2"></li>
+							<li class="product__star--v2"></li>
+							<li class="product__star--v2"></li>
+							<li class="product__star--v2"></li>
+							<li class="product__star--v2"></li>
+						</ul>
+						<div>
+							<ul class="product__stars--v3" style="background-image: linear-gradient(to right, #d9e416 0%, #d9e416 50%, transparent 50%, transparent 100%) " data-stars="3">
+								<li class="product__star--v3"></li>
+								<li class="product__star--v3"></li>
+								<li class="product__star--v3"></li>
+								<li class="product__star--v3"></li>
+								<li class="product__star--v3"></li>
+							</ul>
+						</div>
 						<select name="" id="" class="product__select">
 							<option value="" disabled selected>Size</option>
 							<option value="7">7</option>
 							<option value="8">8</option>
-						</select><select name="" id="" class="product__select">
+						</select>
+						<select name="" id="" class="product__select">
 							<option value="" disabled selected>Qty</option>
 							<option value="1">1</option>
 							<option value="2">2</option>
